--- a/MetadataServer/webapp/templates/account/logout.html
+++ b/MetadataServer/webapp/templates/account/logout.html
@@ -16,7 +16,7 @@
     <button class="btn btn-primary" type="submit">
         {% trans 'Sign Out' %}
     </button>
-    <button class="btn btn-default" onclick='window.history.back()' type="submit">
+    <button class="btn btn-default" onclick='window.history.back()' type="button">
         {% trans 'Go back' %}
     </button>
 </form>
