--- a/MetadataClient/resources/public/css/style.css
+++ b/MetadataClient/resources/public/css/style.css
@@ -1,3 +1,219 @@
+
+.TermTree .VirtualScroll {
+    background: white;
+}
+
+.TermTree .tree-label {
+    flex:1;
+    padding-left:10px;
+    padding-right:20px;
+}
+
+.TermTree .tree-option {
+    display:flex;
+    height:100%;
+}
+
+.TermTree .tree-option * {
+    margin:auto;
+}
+
+.TermTree .selectable {
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.TermTree .selectable:hover {
+  background: #ccc
+}
+
+.TermTree .tree-option.is-selected {
+    background: #ebf5ff;
+}
+
+/* https://github.com/JedWatson/react-select/issues/323#issuecomment-222246251 */
+
+.OrganisationInputField .Select-input {
+    position: absolute;
+    top: 0
+}
+.OrganisationInputField .Select-value-label {
+    display: block;
+}
+.OrganisationInputField .Select-value {
+    position: relative;
+    white-space: normal;
+}
+
+.OrganisationInputField .Select-arrow-zone,
+.OrganisationInputField .Select-clear-zone {
+  background: white;
+}
+
+.DataParameterMaster .Select-arrow-zone,
+.DataParameterMaster .Select-clear-zone {
+  background: white;
+}
+
+/* https://github.com/bvaughn/react-virtualized-select/blob/master/source/styles.css */
+
+.VirtualSelectGrid {
+  z-index: 1;
+}
+
+.VirtualizedSelectOption {
+  display: flex;
+  align-items: center;
+  padding: 0 .5rem;
+}
+.VirtualizedSelectFocusedOption {
+  background-color: rgba(0, 126, 255, 0.1);
+}
+
+/* Collection default theme */
+
+.Collection {
+  position: relative;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+
+  /* Without this property, Chrome repaints the entire Collection any time a new row or column is added.
+     Firefox only repaints the new row or column (regardless of this property).
+     Safari and IE don't support the property at all. */
+  will-change: transform;
+}
+
+.Collection__innerScrollContainer {
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.Collection__cell {
+  position: absolute;
+}
+
+/* Grid default theme */
+
+.Grid {
+  position: relative;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+
+  /* Without this property, Chrome repaints the entire Grid any time a new row or column is added.
+     Firefox only repaints the new row or column (regardless of this property).
+     Safari and IE don't support the property at all. */
+  will-change: transform;
+}
+
+.Grid__innerScrollContainer {
+  box-sizing: border-box;
+  overflow: hidden;
+  position: relative;
+}
+
+.Grid__cell {
+  position: absolute;
+}
+
+/* FlexTable default theme */
+
+.FlexTable {
+}
+
+.FlexTable__Grid {
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
+
+.FlexTable__headerRow {
+  font-weight: 700;
+  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.FlexTable__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+}
+
+.FlexTable__headerTruncatedText {
+  display: inline-block;
+  max-width: 100%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.FlexTable__headerColumn,
+.FlexTable__rowColumn {
+  margin-right: 10px;
+  min-width: 0px;
+}
+.FlexTable__rowColumn {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.FlexTable__headerColumn:first-of-type,
+.FlexTable__rowColumn:first-of-type {
+  margin-left: 10px;
+}
+.FlexTable__sortableHeaderColumn {
+  cursor: pointer;
+}
+
+.FlexTable__sortableHeaderIconContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.FlexTable__sortableHeaderIcon {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 24px;
+          flex: 0 0 24px;
+  height: 1em;
+  width: 1em;
+  fill: currentColor;
+}
+
+/* VirtualScroll default theme */
+
+.VirtualScroll {
+  position: relative;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+
+.user-export {
+  padding-top: 1em;
+  border-top: 1px solid #ccc;
+  margin-top: 3em;
+}
+
 footer {
     padding-top: 2em;
     text-align: center;
@@ -40,14 +256,6 @@ footer>p {
     font-size: 0.7em
 }
 
-div.modal-backdrop.in {
-    bottom: 0px;  /* TODO: should be fixed in updated bootstrap.css */
-    z-index: 1040;
-}
-div.modal {
-    z-index: 1050;
-}
-
 .keyword-table {
     margin-bottom: 6px
 }
@@ -79,6 +287,11 @@ div.modal {
 
 .KeywordsThemeTable .topic-cell {
     padding-left: 8px
+}
+
+.KeywordsThemeTable .no-results {
+    color:#999;
+    margin-bottom:20px;
 }
 
 .clickable-text, .btn, .list-group-item {
@@ -280,6 +493,146 @@ body {
     background: #eee;
 }
 
+.tree-term {
+  min-height: 20px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+}
+
+.tree-term-item {
+    display: flex;
+  margin-bottom: -1px;
+  background-color: #ffffff;
+  border: 1px solid #dddddd;
+}
+
+.tree-term-item:first-child {
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+}
+
+.tree-term-item:last-child {
+  margin-bottom: 0;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.tree-term-item.is-selectable {
+  color: #555555;
+}
+
+.tree-term-item.is-selectable .tree-term-item-heading {
+  color: #333333;
+}
+
+.tree-term-item.is-selectable:hover,
+.tree-term-item.is-selectable:focus {
+  text-decoration: none;
+  background-color: #f5f5f5;
+  pointer: "cursor"
+}
+
+.tree-term-item.is-selectable.active,
+.tree-term-item.is-selectable.active:hover,
+.tree-term-item.is-selectable.active:focus {
+  z-index: 2;
+  color: #ffffff;
+  background-color: #428bca;
+  border-color: #428bca;
+}
+
+.tree-term-item.is-selectable.active .tree-term-item-heading,
+.tree-term-item.is-selectable.active:hover .tree-term-item-heading,
+.tree-term-item.is-selectable.active:focus .tree-term-item-heading {
+  color: inherit;
+}
+
+.tree-term-item.is-selectable.active .tree-term-item-text,
+.tree-term-item.is-selectable.active:hover .tree-term-item-text,
+.tree-term-item.is-selectable.active:focus .tree-term-item-text {
+  color: #e1edf7;
+}
+
+.tree-term-item-heading {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.tree-term-item-text {
+  margin-bottom: 0;
+  line-height: 1.3;
+}
+
+.tree-term-item.is-selected {
+  text-shadow: 0 -1px 0 #286090;
+  border-color: #2b669a;
+  z-index: 2;
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #337ab7;
+}
+
+.tree-term-item.is-selectable:hover {
+  background: #eee;
+}
+
+
+.tree-term-item > * {
+  padding-top:10px;
+  padding-bottom:10px;
+}
+
+.tree-term-item .expander {
+  padding-left:15px;
+  padding-right:5px;
+}
+
+.tree-term-item.is-expandable .expander {
+  cursor: pointer;
+}
+
+.tree-term-item .term {
+  flex: 1
+}
+
+.tree-term-item .children_count {
+  margin-right:15px;
+  align-self: flex-end;
+}
+
+.flex-row {
+  display: flex;
+}
+
+.flex-row-field {
+  flex: 1;
+  margin-right: 5px;
+}
+
+.flex-row-button {
+  align-self: flex-end;
+  margin-bottom:15px;
+}
+
+.shortName .form-group{
+    display:flex;
+    margin-top:-10px;
+    margin-bottom:30px;
+}
+
+.DataParameterMaster .new-term {
+    padding-right:5px;
+    font-weight:bold;
+}
+
+.DataParameterMaster > div {
+    margin-bottom:15px;
+}
+
 .wauto {
     width: auto
 }
@@ -374,4 +727,344 @@ body {
 
 .has-error .input-group .form-control {
   border-right-width: 0;
+}
+
+
+/**
+ * React Select
+ * ============
+ * Created by Jed Watson and Joss Mackison for KeystoneJS, http://www.keystonejs.com/
+ * https://twitter.com/jedwatson https://twitter.com/jossmackison https://twitter.com/keystonejs
+ * MIT License: https://github.com/keystonejs/react-select
+*/
+.Select {
+  position: relative;
+}
+.Select,
+.Select div,
+.Select input,
+.Select span {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.Select.is-disabled > .Select-control {
+  background-color: #f9f9f9;
+}
+.Select.is-disabled > .Select-control:hover {
+  box-shadow: none;
+}
+.Select.is-disabled .Select-arrow-zone {
+  cursor: default;
+  pointer-events: none;
+}
+.Select-control {
+  background-color: #fff;
+  border-color: #d9d9d9 #ccc #b3b3b3;
+  border-radius: 0px;
+  border: 1px solid #e5e6e7;
+  color: #333;
+  cursor: default;
+  display: table;
+  height: 34px;
+  outline: none;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+.Select-control:hover {
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
+}
+.is-searchable.is-open > .Select-control {
+  cursor: text;
+}
+.is-open > .Select-control {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  background: #fff;
+  border-color: #b3b3b3 #ccc #d9d9d9;
+}
+.is-open > .Select-control > .Select-arrow {
+  border-color: transparent transparent #999;
+  border-width: 0 5px 5px;
+}
+.is-searchable.is-focused:not(.is-open) > .Select-control {
+  cursor: text;
+}
+.is-focused:not(.is-open) > .Select-control {
+  border-color: #3c8dbc !important;
+  box-shadow: none;
+}
+.Select-placeholder,
+:not(.Select--multi) > .Select-control .Select-value {
+  bottom: 0;
+  color: #aaa;
+  left: 0;
+  line-height: 32px;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.has-value:not(.Select--multi) > .Select-control > .Select-value .Select-value-label,
+.has-value.is-pseudo-focused:not(.Select--multi) > .Select-control > .Select-value .Select-value-label {
+  /*color: #333;*/
+  color:rgb(103, 106, 108);
+}
+.has-value:not(.Select--multi) > .Select-control > .Select-value a.Select-value-label,
+.has-value.is-pseudo-focused:not(.Select--multi) > .Select-control > .Select-value a.Select-value-label {
+  cursor: pointer;
+  text-decoration: none;
+}
+.has-value:not(.Select--multi) > .Select-control > .Select-value a.Select-value-label:hover,
+.has-value.is-pseudo-focused:not(.Select--multi) > .Select-control > .Select-value a.Select-value-label:hover,
+.has-value:not(.Select--multi) > .Select-control > .Select-value a.Select-value-label:focus,
+.has-value.is-pseudo-focused:not(.Select--multi) > .Select-control > .Select-value a.Select-value-label:focus {
+  color: #007eff;
+  outline: none;
+  text-decoration: underline;
+}
+.Select-input {
+  height: 32px;
+  padding-left: 10px;
+  padding-right: 10px;
+  vertical-align: middle;
+}
+.Select-input > input {
+  background: none transparent;
+  border: 0 none;
+  box-shadow: none;
+  cursor: default;
+  display: inline-block;
+  font-family: inherit;
+  font-size: inherit;
+  height: 32px;
+  margin: 0;
+  outline: none;
+  padding: 0;
+  -webkit-appearance: none;
+}
+.is-focused .Select-input > input {
+  cursor: text;
+}
+.has-value.is-pseudo-focused .Select-input {
+  opacity: 0;
+}
+.Select-control:not(.is-searchable) > .Select-input {
+  outline: none;
+}
+.Select-loading-zone {
+  cursor: pointer;
+  display: table-cell;
+  position: relative;
+  text-align: center;
+  vertical-align: middle;
+  width: 16px;
+}
+.Select-loading {
+  -webkit-animation: Select-animation-spin 400ms infinite linear;
+  -o-animation: Select-animation-spin 400ms infinite linear;
+  animation: Select-animation-spin 400ms infinite linear;
+  width: 16px;
+  height: 16px;
+  box-sizing: border-box;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  border-right-color: #333;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+}
+.Select-clear-zone {
+  -webkit-animation: Select-animation-fadeIn 200ms;
+  -o-animation: Select-animation-fadeIn 200ms;
+  animation: Select-animation-fadeIn 200ms;
+  color: #999;
+  cursor: pointer;
+  display: table-cell;
+  position: relative;
+  text-align: center;
+  vertical-align: middle;
+  width: 17px;
+}
+.Select-clear-zone:hover {
+  color: #D0021B;
+}
+.Select-clear {
+  display: inline-block;
+  font-size: 18px;
+  line-height: 1;
+}
+.Select--multi .Select-clear-zone {
+  width: 17px;
+}
+.Select-arrow-zone {
+  cursor: pointer;
+  display: table-cell;
+  position: relative;
+  text-align: center;
+  vertical-align: middle;
+  width: 25px;
+  padding-right: 5px;
+}
+.Select-arrow {
+  border-color: #999 transparent transparent;
+  border-style: solid;
+  border-width: 5px 5px 2.5px;
+  display: inline-block;
+  height: 0;
+  width: 0;
+}
+.is-open .Select-arrow,
+.Select-arrow-zone:hover > .Select-arrow {
+  border-top-color: #666;
+}
+@-webkit-keyframes Select-animation-fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes Select-animation-fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.Select-menu-outer {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-top-color: #e6e6e6;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
+  box-sizing: border-box;
+  margin-top: -1px;
+  max-height: 200px;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  z-index: 3000;
+  -webkit-overflow-scrolling: touch;
+}
+.Select-menu {
+  max-height: 198px;
+  overflow-y: auto;
+}
+.Select-option {
+  box-sizing: border-box;
+  color: #666666;
+  cursor: pointer;
+  display: block;
+  padding: 8px 10px;
+}
+.Select-option:last-child {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.Select-option.is-focused {
+  background-color: rgba(0, 126, 255, 0.08);
+  color: #333;
+}
+.Select-option.is-disabled {
+  color: #cccccc;
+  cursor: default;
+}
+.Select-noresults {
+  box-sizing: border-box;
+  color: #999999;
+  cursor: default;
+  display: block;
+  padding: 8px 10px;
+}
+.Select--multi .Select-input {
+  vertical-align: middle;
+  margin-left: 10px;
+  padding: 0;
+}
+.Select--multi.has-value .Select-input {
+  margin-left: 5px;
+}
+.Select--multi .Select-value {
+  background-color: rgba(0, 126, 255, 0.08);
+  border-radius: 2px;
+  border: 1px solid rgba(0, 126, 255, 0.24);
+  color: #007eff;
+  display: inline-block;
+  font-size: 0.9em;
+  line-height: 1.4;
+  margin-left: 5px;
+  margin-top: 5px;
+  vertical-align: top;
+}
+.Select--multi .Select-value-icon,
+.Select--multi .Select-value-label {
+  display: inline-block;
+  vertical-align: middle;
+}
+.Select--multi .Select-value-label {
+  border-bottom-right-radius: 2px;
+  border-top-right-radius: 2px;
+  cursor: default;
+  padding: 2px 5px;
+}
+.Select--multi a.Select-value-label {
+  color: #007eff;
+  cursor: pointer;
+  text-decoration: none;
+}
+.Select--multi a.Select-value-label:hover {
+  text-decoration: underline;
+}
+.Select--multi .Select-value-icon {
+  cursor: pointer;
+  border-bottom-left-radius: 2px;
+  border-top-left-radius: 2px;
+  border-right: 1px solid rgba(0, 126, 255, 0.24);
+  padding: 1px 5px 3px;
+}
+.Select--multi .Select-value-icon:hover,
+.Select--multi .Select-value-icon:focus {
+  background-color: rgba(0, 113, 230, 0.08);
+  color: #0071e6;
+}
+.Select--multi .Select-value-icon:active {
+  background-color: rgba(0, 126, 255, 0.24);
+}
+.Select--multi.is-disabled .Select-value {
+  background-color: #fcfcfc;
+  border: 1px solid #e3e3e3;
+  color: #333;
+}
+.Select--multi.is-disabled .Select-value-icon {
+  cursor: not-allowed;
+  border-right: 1px solid #e3e3e3;
+}
+.Select--multi.is-disabled .Select-value-icon:hover,
+.Select--multi.is-disabled .Select-value-icon:focus,
+.Select--multi.is-disabled .Select-value-icon:active {
+  background-color: #fcfcfc;
+}
+@keyframes Select-animation-spin {
+  to {
+    transform: rotate(1turn);
+  }
+}
+@-webkit-keyframes Select-animation-spin {
+  to {
+    -webkit-transform: rotate(1turn);
+  }
+}
+
+.has-error .Select-control {
+  border-color: #a94442;
 }
