--- a/MetadataServer/webapp/templates/base.html
+++ b/MetadataServer/webapp/templates/base.html
@@ -71,7 +71,7 @@
         <footer>
             <p>Built with love by
                 <a href="http://www.condense.com.au">Condense</a> for
-                <a href="http://www.imas.utas.edu.au">IMAS</a></p>
+                <a href="https://portal.aodn.org.au/">AODN</a></p>
 
         </footer>
     </div>
