--- a/MetadataServer/webapp/templates/base.html
+++ b/MetadataServer/webapp/templates/base.html
@@ -72,8 +72,7 @@
         <footer>
             <p>Built with love by
                 <a href="http://www.condense.com.au">Condense</a> for
-                <a href="https://portal.aodn.org.au/">AODN</a></p>
-
+                <a href="http://imos.org.au/aodn.html">AODN</a></p>
         </footer>
     </div>
     {% endblock %}
