Add development-funding attribution to homepage

--- a/MetadataServer/webapp/templates/home.html
+++ b/MetadataServer/webapp/templates/home.html
@@ -238,10 +238,16 @@
                 <h1 class="cover-heading">{{ sitecontent.title }} {{ sitecontent.tag_line }}</h1>
 
                 <p class="lead">
-                    An open source tool for capturing research data -
-                    simplifying the process of gathering information in a standard format
-                    and preparing it for upload to the {{ sitecontent.portal_title }}.
+                  An open source tool for capturing research data -
+                  simplifying the process of gathering information in a standard format
+                  and preparing it for upload to the {{ sitecontent.portal_title }}.
                 </p>
+
+                <p>The AODN would like to acknowledge initial
+                development of this tool by the Institute for Marine
+                and Antarctic Studies, University of Tasmania, and
+                this subsequent work which was co-funded by Research
+                Data Services (RDS).</p>
 
                 <p class="lead">
                     <a href="{% url 'account_login' %}" class="btn btn-lg btn-default">Sign in</a>
