--- a/MetadataServer/webapp/templates/email_user_upload_alert.html
+++ b/MetadataServer/webapp/templates/email_user_upload_alert.html
@@ -2,7 +2,7 @@
 <p>{{ document.title }} is now available for discovery in the {{ site.sitecontent.portal_title }}.</p>
 
 <p>
-    View record in data portal as follows:
+    View the complete record at
     <a href="{{ portal_record_url }}">{{portal_record_url}}</a>
 </p>
 
